<?xml version="1.0" encoding="utf-8"?>



<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->

    <!--tools:context="prueba.app.llerena.steven.com.localizacionmovil.MainActivity">-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="prueba.app.llerena.steven.com.localizacionmovil.MainActivity">


    <ImageView
        android:id="@+id/imagen"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"

        android:src="@drawable/signo"
        android:clickable="true"

        android:onClick="Click_Imagen"
        />

    <TextView

        android:id="@+id/text33"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="-5dp"

        android:text="Cuenta"
        android:textSize="25dp"
        android:textAlignment="center"
        android:textColor="@color/rojodialog"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/nombre_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imagen"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/normal_padding"
        android:background="@drawable/edit_text_border"
        android:hint="@string/nombre_input"
        android:inputType="textPersonName"
        android:padding="@dimen/edit_text_padding"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <EditText
        android:id="@+id/contrasena_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nombre_input"

        android:layout_marginBottom="@dimen/padding_between"
        android:layout_marginTop="@dimen/normal_padding"
        android:padding="@dimen/edit_text_padding"

        android:background="@drawable/edit_text_border"
        android:layout_centerHorizontal="true"
        android:hint="@string/contrasena_input"
        android:inputType="textPassword"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <CheckBox
        android:id="@+id/recordar_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contrasena_input"

        android:layout_alignLeft="@+id/contrasena_input"
        android:layout_alignStart="@+id/contrasena_input"

        android:checked="true"
        android:text="@string/recordar_check"
        />


    <TextView
        android:id="@+id/incorrecto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contrasena_input"

        android:layout_marginTop="-10dp"
        android:layout_alignStart="@+id/contrasena_input"

        android:text="@string/olvidar_text2"
        android:textColor="@color/Rojo"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />

    <Button
        android:id="@+id/entrar_boton"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/recordar_check"

        android:text="@string/entrar_boton"
        android:textColor="@android:color/white"
        android:textStyle="bold"

        android:background="@color/rojodialog"

        android:onClick="BotonEntrar"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/entrar_boton"

        android:layout_marginTop="10dp"

        android:background="#C8C9CB"
        />


    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"

        android:layout_marginTop="10dp"

        android:text="Tiempo:"
        android:textSize="30dp"
        android:textColor="@color/Negro"
        />

    <EditText
        android:id="@+id/tiempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"

        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/text1"

        android:singleLine="true"
        android:hint="Digite Tiempo (seg)"
        />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"

        android:layout_marginTop="10dp"

        android:textSize="30dp"
        android:text="Distancia:"
        android:textColor="@color/Negro"
        />

    <EditText
        android:id="@+id/distancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"

        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/text2"

        android:hint="Digite distancia (mts)"
        android:singleLine="true"
        />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"

        android:layout_marginTop="10dp"

        android:text="ID:"
        android:textSize="30dp"
        android:textColor="@color/Negro"
        />

    <EditText
        android:id="@+id/id_vehiculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"

        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/text3"

        android:singleLine="true"
        android:hint="Digite Usuario"
        />

    <Button
        android:id="@+id/botonactivar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/text3"

        android:layout_marginTop="15dp"

        android:text="ACTIVAR SISTEMA"
        android:textColor="@android:color/white"
        android:textStyle="bold"

        android:background="@color/rojodialog"

        android:onClick="ActivarSistema"
        />

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@+id/botonactivar"

        android:layout_marginBottom="@dimen/padding_between"
        android:layout_marginTop="10dp"

        android:background="#C8C9CB"
        />

</RelativeLayout>

    <!--</ScrollView>-->